--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
     "express": "^4.18.2",
     "mongodb": "^6.5.0",
     "mongoose": "^7.3.1",
-    "nodemon": "^2.0.22"
+    "netlify-lambda": "^2.0.16",
+    "nodemon": "^2.0.22",
+    "serverless-http": "^3.2.0"
   }
 }
